--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,6 +16,7 @@ const { title, description, info } = entry?.data;
       <div class="section row pb-0">
         <div class="col-12 md:col-6 lg:col-7">
           <form class="contact-form" method="POST" action={contact_form_action}>
+            <input type="hidden" name="access_key" value="93a5c502-34a8-4618-bf16-6453518ca4bf">
             <div class="mb-3">
               <input
                 class="form-input w-full rounded"
